[package]
name = "mount_arelle"
version = "0.1.0"
authors = ["Adam <adamsimeth@gmail.com>"]

[dependencies]
rand = "0.3.16"
image = "0.15.0"
cgmath = "0.15.0"

serde = "1.0.11"
serde_derive = "1.0"
serde_json = "1.0.2"

piston = "0.32.0"
piston_window = "0.69.0"
pistoncore-input = "0.18.0"
pistoncore-glutin_window = "0.38.0"
pistoncore-window = "0.26.0"
piston2d-graphics = "0.21.1"
piston2d-opengl_graphics = "0.46.0"
